--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "ts-loader": "^4.3.0",
     "tslint": "^5.10.0",
