--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "postcss": "^6.0.22",
     "postcss-cssnext": "^3.1.0",
@@ -32,6 +33,7 @@
     "ts-loader": "^4.3.0",
     "tslint": "^5.10.0",
     "typescript": "^2.8.3",
+    "url-loader": "^1.0.1",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
